refactro: block measurements guide when offline

--- a/src/scss/base/_general.scss
+++ b/src/scss/base/_general.scss
@@ -36,6 +36,14 @@ body {
     .weight-container__skip-btn {
       pointer-events: none !important;
     }
+
+    .measurements__list {
+      pointer-events: none !important;
+    }
+
+    .header__close {
+      pointer-events: none !important;
+    }
   }
 }
 
