--- a/src/containers/CameraModeSelection/CameraModeSelection.scss
+++ b/src/containers/CameraModeSelection/CameraModeSelection.scss
@@ -2,6 +2,8 @@
 
 .camera-mode-selection {
   padding-top: 18px;
+  display: flex;
+  flex-direction: column;
 
   .screen__title {
     margin-bottom: 20px;
@@ -63,14 +65,10 @@
     padding: 0 12px;
     margin-bottom: 16px;
     height: calc(100% - 67px);
-
-    img {
-      max-width: 100%;
-      max-height: 100%;
-      width: 100%;
-      height: 100%;
-      object-fit: contain;
-    }
+    position: relative;
+    background-repeat: no-repeat;
+    background-position: top center;
+    background-size: contain;
   }
 
   &__title {
@@ -110,5 +108,11 @@
     width: 1px;
     outline: 0;
     appearance: none;
+  }
+
+  &__img-onload-detect {
+    opacity: 0;
+    width: 10px;
+    height: 10px;
   }
 }
