--- a/src/containers/Upload/Upload.scss
+++ b/src/containers/Upload/Upload.scss
@@ -89,7 +89,6 @@
     align-items: center;
     width: 100%;
     max-width: 275px;
-    flex-grow: 1;
     flex-direction: column;
   }
 
@@ -124,5 +123,54 @@
     left: 0;
     width: 100%;
     height: 100%;
+  }
+
+  &__tabs-btn-wrap {
+    width: fit-content;
+    margin: 0 auto;
+    border: 2px solid $main-color;
+    border-radius: 4px;
+    display: flex;
+    align-items: center;
+  }
+
+  &__tabs {
+    flex-grow: 1;
+    width: calc(100% - 72px);
+    margin: 0 auto;
+    display: flex;
+    flex-direction: column;
+  }
+
+  &__tabs-photo {
+    flex-grow: 1;
+    background-size: contain;
+    background-position: center;
+    background-repeat: no-repeat;
+    display: none;
+
+    &--active {
+      display: block;
+    }
+  }
+
+  &__tabs-btn {
+    font-size: 12px;
+    line-height: 14px;
+    font-weight: 500;
+    letter-spacing: 0;
+    text-align: center;
+    text-transform: uppercase;
+    color: $main-color;
+    border: none;
+    padding: 6px;
+    width: 105px;
+    background-color: transparent;
+
+    &--active {
+      background-color: $main-color;
+      color: white;
+      pointer-events: none;
+    }
   }
 }
