--- a/src/containers/Upload/Upload.scss
+++ b/src/containers/Upload/Upload.scss
@@ -131,7 +131,6 @@
     border: 2px solid $main-color;
     border-radius: 4px;
     display: flex;
-    align-items: center;
   }
 
   &__tabs {
@@ -155,6 +154,7 @@
   }
 
   &__tabs-btn {
+    margin: 0;
     font-size: 12px;
     line-height: 14px;
     font-weight: 500;
