improvement: voice instructions (in progress..)

--- a/src/scss/base/_general.scss
+++ b/src/scss/base/_general.scss
@@ -37,6 +37,19 @@ body {
       pointer-events: none !important;
     }
   }
+
+  &.camera-front-mode {
+    .header__help {
+      opacity: 0 !important;
+      pointer-events: none !important;
+    }
+
+    .header {
+      path {
+        stroke: #fff;
+      }
+    }
+  }
 }
 
 button {
