--- a/src/containers/Upload/Upload.scss
+++ b/src/containers/Upload/Upload.scss
@@ -125,52 +125,20 @@
     height: 100%;
   }
 
-  &__tabs-btn-wrap {
-    width: fit-content;
-    margin: 0 auto;
-    border: 2px solid $main-color;
-    border-radius: 4px;
-    display: flex;
-  }
-
-  &__tabs {
+  &__image-example {
     flex-grow: 1;
-    width: calc(100% - 72px);
-    margin: 0 auto;
-    display: flex;
-    flex-direction: column;
-  }
-
-  &__tabs-photo {
-    flex-grow: 1;
+    width: 100%;
     background-size: contain;
-    background-position: center;
     background-repeat: no-repeat;
-    display: none;
-
-    &--active {
-      display: block;
-    }
+    background-position: top center;
+    max-width: 325px;
+    margin: 0 auto;
+    position: relative;
   }
 
-  &__tabs-btn {
-    margin: 0;
-    font-size: 12px;
-    line-height: 14px;
-    font-weight: 500;
-    letter-spacing: 0;
-    text-align: center;
-    text-transform: uppercase;
-    color: $main-color;
-    border: none;
-    padding: 6px;
-    width: 105px;
-    background-color: transparent;
-
-    &--active {
-      background-color: $main-color;
-      color: white;
-      pointer-events: none;
-    }
+  &__image-example-onload-detect {
+    opacity: 0;
+    width: 10px;
+    height: 10px;
   }
 }
