refactor: change cameraMode to isTableFlow

--- a/src/scss/base/_general.scss
+++ b/src/scss/base/_general.scss
@@ -38,7 +38,7 @@ body {
     }
   }
 
-  &.camera-front-mode {
+  &.camera-table-flow {
     .header__help {
       opacity: 0 !important;
       pointer-events: none !important;
