--- a/src/containers/CameraModeSelection/CameraModeSelection.scss
+++ b/src/containers/CameraModeSelection/CameraModeSelection.scss
@@ -38,8 +38,16 @@
     justify-content: flex-end;
 
     &--back {
-      .camera-mode-selection__img-wrap {
-        border-right: 1px solid #D8D8D8;
+      position: relative;
+
+      &::after {
+        content: '';
+        position: absolute;
+        top: 0;
+        right: 0;
+        width: 1px;
+        height: 200px;
+        background-color: #D8D8D8;
       }
     }
 
