refactor: final voice after preloader start

--- a/src/components/Preloader/Preloader.scss
+++ b/src/components/Preloader/Preloader.scss
@@ -46,6 +46,11 @@
       margin: 0 auto;
       background-color: white;
     }
+
+    & + .widget-camera {
+      opacity: 0;
+      z-index: -1;
+    }
   }
 
   &__title {
