feat: add loader to footer btn for welcome screen

--- a/src/containers/Welcome/Welcome.scss
+++ b/src/containers/Welcome/Welcome.scss
@@ -13,6 +13,28 @@
   + .screen__footer {
     .button {
       box-shadow: none;
+
+      img {
+        display: none;
+      }
+
+      span {
+        display: block;
+      }
+
+      &[disabled] {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        
+        img {
+          display: block;
+        }
+
+        span {
+          display: none;
+        }
+      }
     }
   }
 
