--- a/src/scss/layouts/_screen.scss
+++ b/src/scss/layouts/_screen.scss
@@ -175,4 +175,18 @@ $failure: $error-border-color;
     flex-direction: column;
     flex-grow: 1;
   }
+
+  &__footer-loader {
+    animation: footer-loader-spin 3s linear infinite;
+    
+  }
+}
+
+@keyframes footer-loader-spin {
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
 }
