--- a/src/containers/QRCodeContainer/QRCodeContainer.scss
+++ b/src/containers/QRCodeContainer/QRCodeContainer.scss
@@ -111,6 +111,12 @@
     border: 0;
     box-shadow: 0 2px 6px 0 rgba(0,0,0,0.11);
     top: calc(100% + 0px);
+    display: flex;
+    flex-direction: column;
+
+    &.hide {
+      z-index: -1;
+    }
   }
 
   .intl-tel-input.allow-dropdown.separate-dial-code .selected-dial-code {
