hotfix: placeholder position

--- a/src/containers/WeightContainer/WeightContainer.scss
+++ b/src/containers/WeightContainer/WeightContainer.scss
@@ -48,7 +48,7 @@
 
   &__placeholder {
     position: absolute;
-    bottom: 16px;
+    top: 0;
     right: 0;
     height: 50px;
     display: flex;
