improvement: update example photos

--- a/src/components/ImageExample/ImageExample.scss
+++ b/src/components/ImageExample/ImageExample.scss
@@ -69,6 +69,8 @@
   &__img-wrap {
     margin: 0;
     position: relative;
+    background-color: white;
+    border-radius: 4px;
   }
 
   &__close-btn {
