refactor: change laoder position

--- a/src/containers/HowToTakePhotos/HowToTakePhotos.scss
+++ b/src/containers/HowToTakePhotos/HowToTakePhotos.scss
@@ -4,6 +4,7 @@
   padding-top: 18px;
   display: flex;
   flex-direction: column;
+  position: relative;
 
   .screen__title {
     margin-bottom: 16px;
