--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -57,6 +57,12 @@
     }
   }
 
+  &--translucent {
+    button {
+      opacity: 0.4;
+    }
+  }
+
   &__offline-status {
     position: fixed;
     top: 0;
