--- a/src/containers/CameraModeSelection/CameraModeSelection.scss
+++ b/src/containers/CameraModeSelection/CameraModeSelection.scss
@@ -42,6 +42,13 @@
     border: 1px solid #DEDEDE;
     border-radius: 4px;
 
+    @media (max-height: 667px) {
+      flex-direction: row;
+      justify-content: flex-start;
+      align-items: center;
+      padding: 8px;
+    }
+
     &:first-child {
       margin-bottom: 10px;
     }
@@ -71,6 +78,13 @@
     width: 100%;
     margin: 0 0 12px;
     flex-grow: 1;
+
+    @media (max-height: 667px) {
+      width: 70px;
+      height: 54px;
+      flex-grow: 0;
+      margin: 0 16px 0 0;
+    }
   }
 
   &__title {
