--- a/src/containers/CameraModeSelection/CameraModeSelection.scss
+++ b/src/containers/CameraModeSelection/CameraModeSelection.scss
@@ -34,13 +34,20 @@
     width: 100%;
     max-width: 275px;
     background: transparent;
-    padding: 16px;
+    padding: 8px;
     display: flex;
     flex-direction: column;
     justify-content: flex-end;
     flex-grow: 1;
     border: 1px solid #DEDEDE;
     border-radius: 4px;
+
+    @media (max-height: 600px) {
+      flex-direction: row;
+      justify-content: flex-start;
+      align-items: center;
+      padding: 8px;
+    }
 
     &:first-child {
       margin-bottom: 10px;
@@ -71,12 +78,19 @@
     width: 100%;
     margin: 0 0 12px;
     flex-grow: 1;
+
+    @media (max-height: 600px) {
+      width: 70px;
+      height: 54px;
+      flex-grow: 0;
+      margin: 0 16px 0 0;
+    }
   }
 
   &__title {
     color: #343239;
     text-align: center;
-    font-size: 16px;
+    font-size: 14px;
   }
 
   input[type='radio'] {
