--- a/src/containers/GenderContainer/GenderContainer.scss
+++ b/src/containers/GenderContainer/GenderContainer.scss
@@ -10,6 +10,10 @@ $border-width: 2px;
     @include visually-hidden();
   }
 
+  &__check {
+    margin-bottom: 20px;
+  }
+
   &__item {
     height: 50px;
     background: #fff;
