--- a/src/containers/HardValidation/HardValidation.scss
+++ b/src/containers/HardValidation/HardValidation.scss
@@ -1,28 +1,87 @@
 @import '../../scss/utils/index';
-@import '../SoftValidation/SoftValidation';
 
 .hard-validation {
-  @extend .soft-validation;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  flex-grow: 1;
 
   &__title {
-    @extend .soft-validation__title;
+    margin-bottom: 5px;
+    text-align: center;
   }
 
   &__text {
-    @extend .soft-validation__text;
+    text-align: center;
     max-width: 320px;
     margin: 0 auto;
   }
 
   &__image {
-    @extend .soft-validation__image;
+    margin: 0 auto;
+    margin-top: 39px;
   }
 
   &__title-2 {
-    @extend .soft-validation__title-2;
+    text-align: center;
+    font-size: rem(12px);
+    font-weight: 500;
+    letter-spacing: 1.17px;
+    line-height: 16px;
+    text-transform: uppercase;
+    margin-top: 50px;
+    margin-bottom: 20px;
   }
 
   &__recommendations {
-    @extend .soft-validation__recommendations;
+    margin: 0 auto;
+    counter-reset: inc;
+    max-width: 312px;
+    padding-left: 18px;
+    list-style: none;
+    overflow-y: auto;
+    flex-grow: 1;
+    max-height: 145px;
+
+    @include breakpoint($mobile) {
+      max-height: 28vh;
+    }
+
+    li {
+      counter-increment: inc;
+      position: relative;
+      margin-bottom: 5px;
+
+      &::before {
+        content: counter(inc) '.';
+        color: #DDDDDD;
+        font-size: rem(9px);
+        vertical-align: middle;
+        position: absolute;
+        left: -19px;
+        top: 0px;
+      }
+    }
+
+    /* width */
+    &::-webkit-scrollbar {
+      width: 5px;
+    }
+
+    /* Track */
+    &::-webkit-scrollbar-track {
+      background: #DDDDDD;
+    }
+
+    /* Handle */
+    &::-webkit-scrollbar-thumb {
+      background: #000;
+      border-radius: 5px;
+    }
+
+    /* Handle on hover */
+    &::-webkit-scrollbar-thumb:hover {
+      background: #000;
+    }
   }
 }
