--- a/src/containers/Results/Result.scss
+++ b/src/containers/Results/Result.scss
@@ -23,6 +23,10 @@ $bottom-position: -30px;
     margin-bottom: 35px;
   }
 
+  &--with-soft-validation &__thanks {
+    margin-top: 20px;
+  }
+
   &__title {
     margin-top: 29px;
     margin-bottom: 60px;
