feat: add ability to set custom button title via data-* attr

--- a/src/templates/button.html
+++ b/src/templates/button.html
@@ -1,3 +1,3 @@
-<button class="saia-mtm-button classes">
-  <span>GET MEASURED</span>
+<button class="saia-mtm-button {{classes}}">
+  <span>{{buttonTitle}}</span>
 </button>
