--- a/src/containers/Upload/Upload.scss
+++ b/src/containers/Upload/Upload.scss
@@ -8,6 +8,26 @@
   align-items: center;
   justify-content: flex-start;
   flex-direction: column;
+  background-color: #F6F6F6;
+  position: relative;
+
+  &::after {
+    content: "";
+    position: absolute;
+    top: -70px;
+    left: 0;
+    background-color: #F6F6F6;
+    height: 70px;
+    width: 100%;
+  }
+
+  & + .screen__footer {
+    background-color: #F6F6F6;
+  }
+
+  .loader {
+    background-color: #F6F6F6;
+  }
 
   &__title {
     margin-bottom: 20px;
@@ -30,54 +50,6 @@
   }
 
   &--is-mobile > p {
-    @include breakpoint($tablet) {
-      display: none;
-    }
-  }
-
-  &__qrcode {
-    margin: 0 auto;
-    margin-top: 20px;
-  }
-
-  &__video {
-    margin-right: 35px;
-
-    &-btn {
-      border-radius: 25px;
-      width: 33px;
-      height: 33px;
-      box-shadow: 0 4px 10px 0 rgba(163,76,0,0.19);
-      border: 0;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      padding: 0;
-      margin: 0 auto;
-      padding-left: 4px;
-      background: #fff;
-
-      span {
-        @include visually-hidden;
-      }
-
-      @include breakpoint((max-width 320px, max-height 568px)) {
-        height: 70px;
-      }
-    }
-
-    p {
-      font-size: rem(11px);
-      font-weight: normal;
-      letter-spacing: 0.3px;
-      line-height: 21px;
-      text-align: center;
-      color: #F88E32;
-      margin-top: 5px;
-    }
-  }
-
-  &--is-mobile &__video {
     @include breakpoint($tablet) {
       display: none;
     }
@@ -140,5 +112,19 @@
     opacity: 0;
     width: 10px;
     height: 10px;
+  }
+
+  &__video-wrap {
+    width: 100%;
+    position: relative;
+    flex-grow: 1;
+  }
+
+  &__video {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
   }
 }
