--- a/src/components/Preloader/Preloader.scss
+++ b/src/components/Preloader/Preloader.scss
@@ -38,9 +38,9 @@
     &::after {
       content: '';
       position: absolute;
-      width: 200px;
-      height: 20px;
-      top: -20px;
+      width: 100%;
+      height: 40px;
+      top: -40px;
       left: 0;
       right: 0;
       margin: 0 auto;
