--- a/src/components/Requirements/Requirements.scss
+++ b/src/components/Requirements/Requirements.scss
@@ -1,50 +1,34 @@
 @import '../../scss/utils/index';
 
-.tabs {
-  flex-grow: 1;
-  width: calc(100% - 72px);
-  margin: 0 auto;
-  display: flex;
-  flex-direction: column;
-
-  &__btn-wrap {
-    width: fit-content;
-    margin: 0 auto;
-    border: 2px solid $main-color;
-    border-radius: 4px;
-    display: flex;
-  }
-
-  &__photo {
+.requirements {
+  &__image-example {
     flex-grow: 1;
+    width: 100%;
     background-size: contain;
-    background-position: center;
     background-repeat: no-repeat;
-    display: none;
-
-    &--active {
-      display: block;
-    }
+    background-position: top center;
+    max-width: 325px;
+    margin: 0 auto;
+    position: relative;
   }
 
-  &__btn {
-    margin: 0;
-    font-size: 12px;
-    line-height: 14px;
-    font-weight: 500;
-    letter-spacing: 0;
-    text-align: center;
-    text-transform: uppercase;
-    color: $main-color;
-    border: none;
-    padding: 6px;
-    width: 105px;
-    background-color: transparent;
+  &__image-example-onload-detect {
+    opacity: 0;
+    width: 10px;
+    height: 10px;
+  }
 
-    &--active {
-      background-color: $main-color;
-      color: white;
-      pointer-events: none;
-    }
+  &__video-wrap {
+    width: 100%;
+    position: relative;
+    flex-grow: 1;
+  }
+
+  &__video {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
   }
 }
