--- a/src/components/Requirements/Requirements.scss
+++ b/src/components/Requirements/Requirements.scss
@@ -30,5 +30,8 @@
     left: 0;
     width: 100%;
     height: 100%;
+    -webkit-mask-image: -webkit-radial-gradient(white, black); /* for iphone video borders */
+    -webkit-backface-visibility: hidden; /* for iphone video borders */
+    -moz-backface-visibility: hidden; /* for iphone video borders */
   }
 }
