feat: add custom buttom text color

--- a/src/templates/button.html
+++ b/src/templates/button.html
@@ -1,6 +1,9 @@
 <button class="saia-mtm-button {{classes}}">
   <span class="saia-mtm-button__preloader">
     <svg width="24px" height="24px" viewBox="0 0 25 24" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
+
+      <!-- !!! if change this svg, change custom loader color for setCustomSettings in src/button.js !!! -->
+
       <g stroke="none" stroke-width="1" fill="none" fill-rule="evenodd">
         <path d="M3.5,12 C3.5,16.8818027 7.38681368,20.8557914 12.2346377,20.9961629 L12.5,21 L12.5,24 C5.97454326,24 0.665607248,18.7914556 0.503799858,12.3049748 L0.5,12 L3.5,12 Z M12.5,0 C19.0254567,0 24.3343928,5.20854437 24.4962001,11.6950252 L24.5,12 L21.5,12 C21.5,7.1181973 17.6131863,3.14420858 12.7653623,3.00383711 L12.5,3 L12.5,0 Z"
           fill="#FFFFFF"
