--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -75,4 +75,40 @@
     z-index: 50;
     display: none;
   }
+
+  &__exit {
+    display: none;
+    position: absolute;
+    top: 0;
+    right: 0;
+    left: 0;
+    bottom: 0;
+    width: 100%;
+    height: 100vh;
+    background: #fff;
+    flex-direction: column;
+    z-index: 10;
+
+    p {
+      font-size: 14px;
+      font-style: normal;
+      font-weight: 500;
+      line-height: 20px;
+      margin: 18px 0 27px;
+      text-align: center;
+    }
+
+    &.active {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+    }
+  }
+
+  &__close_btn {
+    background: #fff;
+    border: 2px solid #343239;
+    color: #343239;
+    margin-top: 10px;
+  }
 }
