--- a/src/containers/WeightContainer/WeightContainer.scss
+++ b/src/containers/WeightContainer/WeightContainer.scss
@@ -34,7 +34,6 @@
       height: 100%;
       opacity: 0;
       -webkit-appearance: none; /* for iphone select height */
-
       + .weight-container__placeholder {
         height: 100%;
         bottom: 0;
@@ -76,5 +75,32 @@
     text-decoration: underline;
     color: inherit;
     background-color: transparent;
+  }
+
+  &__switcher-switch {
+    height: 26px;
+    width: 52px;
+    border: 2px solid $main-color;
+    border-radius: 25px;
+    order: 2;
+    position: relative;
+    cursor: pointer;
+    background: #fff;
+
+    span {
+      @include visually-hidden();
+    }
+
+    &:before {
+      content: '';
+      display: none;
+      height: 18px;
+      width: 18px;
+      border-radius: 25px;
+      background-color: $main-color;
+      position: absolute;
+      top: 2px;
+      transition: all ease 300ms;
+    }
   }
 }
